--- a/Desafios_Biblioteca_Pandas.ipynb
+++ b/Desafios_Biblioteca_Pandas.ipynb
@@ -38,7 +38,7 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd # type: ignore"
+        "import pandas as pd "
       ]
     },
     {
